[gd_scene load_steps=5 format=3 uid="uid://d2jlacl0iltrr"]

[ext_resource type="PackedScene" uid="uid://c8lwmwbmi7f06" path="res://ui/back_ground.tscn" id="1_j1lre"]
[ext_resource type="Script" path="res://ui/sub_menu.gd" id="1_oursj"]

[sub_resource type="LabelSettings" id="LabelSettings_r1i8d"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_dq2vg"]
font_size = 24

[node name="SubMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oursj")

[node name="BackGround" parent="." instance=ExtResource("1_j1lre")]
layout_mode = 1
metadata/_edit_lock_ = true

[node name="Back" type="Button" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = -1
offset_left = 48.0
offset_top = 40.0
offset_right = 198.0
offset_bottom = 93.0
focus_next = NodePath("../StartGame")
focus_previous = NodePath(".")
theme_override_font_sizes/font_size = 32
text = "Back
"

[node name="StartGame" type="Button" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = -93.0
offset_right = 198.0
offset_bottom = -40.0
grow_vertical = 0
focus_next = NodePath(".")
focus_previous = NodePath("../Back")
theme_override_font_sizes/font_size = 32
toggle_mode = true
text = "Start Game"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -188.0
offset_right = 256.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 20
columns = 2

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Map"
label_settings = SubResource("LabelSettings_r1i8d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MapName" type="Label" parent="GridContainer/Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -24.0
offset_right = 182.0
offset_bottom = 24.0
grow_vertical = 2
label_settings = SubResource("LabelSettings_r1i8d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Import" type="Button" parent="GridContainer/Panel"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "import"

[node name="Label2" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "speed"
label_settings = SubResource("LabelSettings_r1i8d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="SpeedSlider" type="HSlider" parent="GridContainer/Control"]
custom_minimum_size = Vector2(192, 0)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 5.0
value = 1.0
ticks_on_borders = true

[node name="SpeedLabel" type="Label" parent="GridContainer/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -18.5
offset_right = -8.0
offset_bottom = 18.5
grow_horizontal = 0
grow_vertical = 2
text = "x1.0"
label_settings = SubResource("LabelSettings_dq2vg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Color1Label" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Snake Color"
label_settings = SubResource("LabelSettings_r1i8d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player1Color" type="ColorPickerButton" parent="GridContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 4

[node name="Color2Label" type="Label" parent="GridContainer"]
visible = false
layout_mode = 2
text = "Player2 Color"
label_settings = SubResource("LabelSettings_r1i8d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player2Color" type="ColorPickerButton" parent="GridContainer"]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 4

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(343, 161)
ok_button_text = "打开"
file_mode = 0
access = 2
filters = PackedStringArray("*.map ; Map File")

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="GridContainer/Panel/Import" to="." method="_on_import_pressed"]
[connection signal="value_changed" from="GridContainer/Control/SpeedSlider" to="." method="_on_speed_slider_value_changed"]
[connection signal="color_changed" from="GridContainer/Player1Color" to="." method="_on_player_1_color_color_changed"]
[connection signal="color_changed" from="GridContainer/Player2Color" to="." method="_on_player_2_color_color_changed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
